--- a/doc/report.tex
+++ b/doc/report.tex
@@ -39,6 +39,13 @@ tfoxhal1@binghamton.edu}
 
 \subsection{Programming}
 
+\section{ROI Segmentation}
+
+\subsection{Linear Segments}
+
+I implemented a linear Hough transform to detect lines in the image. Every line
+can be represented as $r = x\cos{\theta} + y\sin{\theta}$.
+
 
 
 \section{References}
